# ndi-player

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLEW.cmake  FindGLFW3.cmake
src/: averror.cpp  averror.hpp  framebuffer.cpp  framebuffer.hpp  glew.cpp  glew.hpp  glfw.cpp  glfw.hpp  glfwerror.cpp  glfwerror.hpp  glfwwindow.cpp  glfwwindow.hpp  glvideorenderer.cpp  glvideorenderer.hpp  macro.hpp  ndi-player.cpp  ndi.cpp  ndi.hpp  ndireciever.cpp  ndireciever.hpp  rendererror.cpp  rendererror.hpp
